# vectorize

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  mise.toml  wrangler.toml
scripts/: serve.sh
src/: lib.rs
