[package]
edition = "2024"
name = "vectorize-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
image = { version = "0.25", default-features = false, features = [
  "gif",
  "jpeg",
  "png",
  "webp",
] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
vtracer = "0.6"
wasm-bindgen = "0.2"
